# appforge-compiler

./: .env.example  .gitignore  README.md  create_mock.py  pyproject.toml  server.py
output/: .gitkeep
src/: __init__.py  cli.py  config.py  ui_renderer.py
src/models/: design.py  intent.py  manifest.py  schema.py
src/pipeline/: orchestrator.py  stage_1_intent.py  stage_2_design.py  stage_3_schema.py  stage_4_validate.py
src/providers/: __init__.py  base.py  gemini.py  groq_provider.py  nvidia_provider.py  openai_provider.py
src/runtime/: __init__.py  error_capture.py  simulator.py
src/validation/: __init__.py  referential.py  repair.py  structural.py
static/: app.js  index.html  style.css
tests/: run_evals.py  test_pipeline.py  test_validation.py
tests/datasets/: edge_cases.json  standard_products.json
